[package]
name = "debug-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.1"
linux-personality = "1.0.0"
gimli = "0.26.1"
object = "0.28.3"

[[bin]]
name = "hello"
test = false
bench = false
