[package]
name = "debug-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.13", features = ["derive"] }
gimli = "0.26.1"
linux-personality = "1.0.0"
nix = "0.23.1"
object = "0.28.3"

[[bin]]
name = "hello"
test = false
bench = false
