[package]
name = "tamandua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
linux-personality = "1.0.0"
nix = "0.23.1"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"


[[bin]]
name = "hello"
test = false
bench = false

[[bin]]
name = "variables"
test = false
bench = false

